# achilles

./: .gitignore  Cargo.toml  README.md  run_experiments.py
configs/: config0.yml
examples/: data_gen_example.rs  expr_gen_example.rs
examples/eval/: simple_example.rs
examples/eval/example-files/: result-1.csv
examples/runner/: simple_example.rs
examples/runner/example_configs/: coordinator.yml  (+1 more)
examples/stream_gen/: products_example.rs
exp_gen_files/test-run-0/: coordinator.yml  test_set_execs.yml  test_set_results.yml  test_sets.yml
extract-diffs/test-run-0/: test-case-results.yml
generated-files/test-run-0/: coordinator.yml  test_set_execs.yml  test_set_results.yml  test_sets.yml
src/: check_results.rs  config.rs  extract_diffs_operation.rs  generate_files.rs  generate_queries.rs  lib.rs  load_config.rs  main.rs  nes_opt_config.rs  nes_query_comp_config.rs  query_list.rs  replay_exec.rs  run_queries.rs  stages.rs  stream_schema.rs  summery.rs  test_case_exec.rs  yaml_util.rs
src/eval/: check_results.rs  eval_error.rs  evaluator.rs  mod.rs
src/expr_gen/: expr_gen.rs
src/oracles/: mod.rs
src/process_test_case/: mod.rs  process_test_sets.rs
src/query_gen/: generate_queries.rs  mod.rs  query_id.rs  test_case.rs  util.rs
src/runner/: mod.rs  runner.rs  runner_config.rs  runner_status.rs
src/stream_gen/: data_generator.rs  logical_source.rs  mod.rs  net_config.rs  physical_source.rs  stream_gen.rs  stream_gen_builder.rs
src/test_case_gen/: generate_test_sets.rs  mod.rs  query_id.rs  test_case.rs  util.rs
tests/eval/: integration_test.rs
(+95 files in other folders)
