[package]
name = "nes-lancer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
nes-types = {path = "../nes-types"}
nes-rust-client = {path = "../nes-rust-client"}
nes-runner = {path = "../nes-runner"}
nes-stream-gen = {path = "../nes-stream-gen/"}
nes-eval = {path = "../nes-eval/"}
simple_logger = "5.0.0"
tokio = "1.38.0"
